Align all glass material to be similar edges

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   .navbar-item {
-    @apply px-4 py-1.5 rounded-full text-black/70 text-sm font-semibold hover:bg-black/10 hover:text-black transition duration-300;
+    @apply px-4 py-1.5 rounded-lg text-black/70 text-sm font-semibold hover:bg-black/10 hover:text-black transition duration-300;
   }
 }
 
