--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,27 @@
   }
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000000;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #222222;
+}
+
 :root {
   --color-bg1: rgb(226, 169, 255);
   --color-bg2: rgb(255, 255, 255);
